# multimodal-slowfast

./: .gitignore  .gitmodules  .mm-asf.sifpath  Makefile  README.md  config.py  eval.py  eval_net.py  main.py  mmsf.py  pyproject.toml  requirements.txt  sing  singrw  test.py  test_net.py  train.py  train_net.py
configs/: train-config-unfrozen.yaml  train-config.yaml
configs/asf/: asf-original-augment.yaml  asf-original.yaml
configs/vsf/: vsf-train.yaml
mmsf/: config.py  mm_epickitchens.py  mmsf.py
mmsf/config/: asf_defaults.py  defaults.py  load.py  vsf_defaults.py
mmsf/datasets/: loader.py  mm_epickitchens.py
mmsf/datasets/audio/: asf_epickitchens.py  audio_loader_epic.py  audio_record.py  epickitchens_record.py  utils.py
mmsf/datasets/audio/augmentations/: __init__.py  spec_augment.py  transforms.py
mmsf/datasets/video/: epickitchens_record.py  frame_loader.py  utils.py  video_record.py  vsf_epickitchens.py
mmsf/datasets/video/augmentations/: transforms.py
mmsf/model/: head.py  mmsf.py
mmsf/model/asf/: asf.py  batch_norm_helper.py  checkpoint.py  head_helper.py  identity_head.py  resnet_helper.py  stem_helper.py  weight_init_helper.py
mmsf/model/vsf/: checkpoint.py  identity_head.py  nonlocal_helper.py  resnet_helper.py  stem_helper.py  vsf.py  weight_init_helper.py
mmsf/utils/: distributed.py  gpu.py  logging.py  lr_policy.py  meters.py  misc.py  optimizer.py
