[tool.poetry]
name = "mmsf"
version = "0.1.0"
description = "Multi-modal version of SlowFast model"
authors = ["Clément Sicard <clement@sicard.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.2.1"
notebook = "^7.1.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
